change to nimble package

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
-main.exe
+*
+!**/
+!*.*
+.DS_Store
+!.gitattributes
+!.gitignore
+!readme.md
+!.gitkeep
+!*.nim
+!*.nims
+!*.nimble
+!*.h
+!*.css
+!*.html
+*.exe
+!*/
+nimbledeps
+src/htmldocs
